--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -17,7 +17,43 @@
         <a class="cnt" href="#skip_content">본문바로가기</a>
     </div>
     <div id="wrap">
-        <header></header>
+        <header>
+                <div class="header_top">
+                    <div class="wrapper">
+                        <div class="today_info">
+                            <div class="today">
+                                <strong>02월17일</strong>
+                                <a href="#n"><i>맑음</i></a>
+                            </div>
+                            <ul class="info_list">
+                                <li><a href="#n">세종날씨</a></li>
+                                <li><a href="#n">미세먼지</a></li>
+                            </ul>
+                        </div>
+                        <ul class="user_menu">
+                            <li><a href="#n">로그인</a></li>
+                            <li><a href="#n">언어</a></li>
+                        </ul>
+                    </div> 
+                </div> 
+                <div class="header_bottom">
+                    <div class="wrapper">
+                        <h1 class="logo"><a href="#n"></a></h1>
+                        <nav class="gnb">
+                            <ul class="depth1">
+                                <li><a href="#n">민원 소통 참여</a></li>
+                                <li><a href="#n">여행정보</a></li>
+                                <li><a href="#n">세종소개</a></li>
+                                <li><a href="#n">정보소개</a></li>
+                                <li><a href="#n">분야별정보</a></li>
+                                <li><a href="#n">생활정보</a></li>
+                            </ul>
+                            <li class="sitemap"><a href="#n"><i>사이트맵</i></a></li>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </header>
         <div class="container">
             <section class="number1">
                 <div class="wrapper">
@@ -41,11 +77,39 @@
                         <div class="visual_popup">
                             <div class="swiper"> 
                                 <ul class="swiper-wrapper"> 
-                                    <li class="swiper-slide"></li>
+                                    <li class="swiper-slide">
+                                        <a href="#n"><img src="../Sejong/images/event_popup/banner_01.jpg" alt="세계를 잇는 한글문화도시 세종"></a>
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <a href="#n"><img src="../Sejong/images/event_popup/banner_02.jpg" alt="세종 시민대학 집현전"></a>
+                                    </li>
+                                    <li class="swiper-slide">
+                                        <a href="#n"><img src="../Sejong/images/event_popup/banner_03.jpg" alt="전월산국민여가 캠핑장 재개장 안내"></a>
+                                    </li>
                                 </ul>
+                                <div class="swiper_nav">
+                                    <div class="swiper-pagination"></div>
+                                    <div class="buntton_inner">
+                                        <button class="prev"><i>이전</i></button>
+                                        <button class="stop"><i>정지</i></button>
+                                        <button class="next"><i>다음</i></button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                        <div class="mayor"></div>
+                        <div class="mayor_area">
+                            <div class="title_group">
+                                <img src="../Sejong/images/visual/sejong.svg" alt="세종이미래다">
+                                <strong>시민과 함께하는 세종시장</strong>
+                                <p><strong>최민호</strong>입니다.</p>
+                            </div>
+                            <div class="photo"><img src="../Sejong/images/visual/mayor_01.jpg" alt="시장사진"></div>
+                            <ul>
+                                <li class="office"><a href="#n"><i>열린 시장실</i></a></li>
+                                <li class="pledge"><a href="#n"><i>공약</i></a></li>
+                                <li class="schedule"><a href="#n"><i>일정보기</i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
