--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="Aerok/index.html">20250206</a></li>
         <li><a href="rot/index.html">20250214</a></li>
+        <li><a href="Sejong/index.html">250220</a></li>
     </ul>
 </body>
 </html>
