--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -23,22 +23,22 @@
                     <div class="today_info">
                         <div class="today">
                             <strong>02월17일</strong>
-                            <a href="#n" name="맑음" role="link"><i>맑음</i></a>
+                            <a href="#n" name="맑음" role="link"><span>맑음</span></a>
                         </div>
                         <ul class="info_list">
-                            <li name="세종날씨" role="link"><a href="#n">세종날씨</a><i>맑음</i></li>
-                            <li name="미세먼지" role="link"><a href="#n">미세먼지</a><i>4℃</i></li>
+                            <li name="세종날씨" role="link"><a href="#n">세종날씨</a><span>맑음</span></li>
+                            <li name="미세먼지" role="link"><a href="#n">미세먼지</a><span>4℃</span></li>
                         </ul>
                     </div>
                     <ul class="user_menu">
-                        <li name="로그인" role="link"><a href="#n">로그인</a></li>
-                        <li name="언어" role="link"><a href="#n">언어</a></li>
+                        <li name="로그인" role="link"><a href="#n"><span>로그인</span></a></li>
+                        <li name="언어" role="link"><a href="#n"><span>언어</span>언어</a></li>
                     </ul>
                 </div> 
             </div> 
             <div class="header_bottom">
                 <div class="wrapper">
-                    <h1 class="logo"><a href="#n"><img src="../Sejong/images/visual/sejong_logo.svg" alt="세종시로고"><i>세종로고</i></a></h1>
+                    <h1 class="logo"><a href="#n"><img src="../Sejong/images/visual/sejong_logo.svg" alt="세종시로고"><span>세종로고</span></a></h1>
                     <nav class="gnb">
                         <ul class="depth1">
                             <li name="민원 소통 참여" role="link"><a href="#n">민원 소통 참여</a></li>
@@ -48,8 +48,8 @@
                             <li name="분야별정보" role="link"><a href="#n">분야별정보</a></li>
                             <li name="생활정보" role="link"><a href="#n">생활정보</a></li>
                         </ul>
-                        <li class="sitemap" name="사이트맵" role="link"><a href="#n"><i>사이트맵</i></a></li>
                     </nav>
+                    <div class="sitemap" name="사이트맵" role="link"><a href="#n"><span>사이트맵</span></a></div>
                 </div>
             </div>
             </div>
@@ -68,7 +68,7 @@
                             </div>
                             <div class="search_inner">
                                 <input type="text" class="search_bar" name="검색어입력" role="textbox" placeholder="세종의 모든것을 검색해보세요">
-                                <button type="button" title="새창으로 이동" class="search_button" name="검색버튼" role="button"><i>검색</i></button>
+                                <button type="button" title="새창으로 이동" class="search_button" name="검색버튼" role="button"><span>검색</span></button>
                             </div>
                         </div>
                     </div>
@@ -90,9 +90,9 @@
                                 <div class="swiper_nav">
                                     <div class="swiper-pagination"></div>
                                     <div class="buntton_inner">
-                                        <button class="prev"><i>이전</i></button>
-                                        <button class="stop"><i>정지</i></button>
-                                        <button class="next"><i>다음</i></button>
+                                        <button class="prev"><span>이전</span></button>
+                                        <button class="stop"><span>정지</span></button>
+                                        <button class="next"><span>다음</span></button>
                                     </div>
                                 </div>
                             </div>
@@ -105,9 +105,9 @@
                             </div>
                             <div class="photo"><img src="../Sejong/images/visual/mayor_01.jpg" alt="시장사진"></div>
                             <ul>
-                                <li class="office"><a href="#n"><i>열린 시장실</i></a></li>
-                                <li class="pledge"><a href="#n"><i>공약</i></a></li>
-                                <li class="schedule"><a href="#n"><i>일정보기</i></a></li>
+                                <li class="office"><a href="#n"><span>열린 시장실</span></a></li>
+                                <li class="pledge"><a href="#n"><span>공약</span></a></li>
+                                <li class="schedule"><a href="#n"><span>일정보기</span></a></li>
                             </ul>
                         </div>
                     </div>
