--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -41,17 +41,124 @@
                     <h1 class="logo"><a href="#n"><img src="../Sejong/images/visual/sejong_logo.svg" alt="세종시로고"><span>세종로고</span></a></h1>
                     <nav class="gnb">
                         <ul class="depth1">
-                            <li name="민원 소통 참여" role="link"><a href="#n">민원 소통 참여</a></li>
-                            <li name="여행정보" role="link"><a href="#n">여행정보</a></li>
-                            <li name="세종소개" role="link"><a href="#n">세종소개</a></li>
-                            <li name="정보소개" role="link"><a href="#n">정보소개</a></li>
-                            <li name="분야별정보" role="link"><a href="#n">분야별정보</a></li>
-                            <li name="생활정보" role="link"><a href="#n">생활정보</a></li>
+                            <li name="민원 소통 참여" role="link">
+                                <a href="#n">
+                                    <span>민원 소통 참여</span>
+                                </a>
+                                <div class="lower_menu">
+                                    <div class="title">
+                                        <div class="slogon"><img src="../Sejong/images/visual/sejong.svg" alt="세종이미래다"></div>
+                                        <div class="bg"><img src="../Sejong/images/visual/bg.svg" alt="세종 로고의 큰 배경화면"></div>
+                                    </div>
+                                    <ul class="depth2">
+                                        <li name="시민의창" role="link">
+                                            <a href="#n">
+                                                <span>시민의 창</span>
+                                            </a>
+                                            <ul class="depth3">
+                                                <li name="시민의 창이란?" role="link"><a href="#n"><span>시민의 창이란?</span></a></li>
+                                                <li name="민원글쓰기 안내" role="link"><a href="#n"><span>민원글쓰기 안내</span></a></li>
+                                                <li name="시민의창 민원목록" role="link"><a href="#n"><span>시민의창 민원목록</span></a></li>
+                                                <li name="나의 시민의창(민원글쓰기)" role="link"><a href="#n"><span>나의 시민의창(민원글쓰기)</span></a></li>
+                                                <li name="칭찬합니다" role="link"><a href="#n"><span>칭찬합니다</span></a></li>
+                                                <li name="공익게시판" role="link"><a href="#n"><span>공익게시판</span></a></li>
+                                                <li name="시민들이 자주 묻는 질문과 답변" role="link"><a href="#n"><span>시민들이 자주 묻는 질문과 답변</span></a></li>
+                                                <li name="똑똑세종/제안" role="link"><a href="#n"><span>똑똑세종/제안</span></a></li>
+                                                <li name="시민참여예산제" role="link"><a href="#n"><span>시민참여예산제</span></a></li>
+                                                <li name="시민참여예산제 사업제안" role="link"><a href="#n"><span>시민참여예산제 사업제안</span></a></li>
+                                            </ul>
+                                        </li>
+                                        <li name="똑똑세종" role="link">
+                                            <a href="#n">
+                                                <span>똑똑세종</span>
+                                            </a>
+                                            <ul class="depth3">
+                                                <li name="국민신문고" role="link"><a href="#n"><span>국민신문고</span></a></li>
+                                                <li name="국민생각함" role="link"><a href="#n"><span>국민생각함</span></a></li>
+                                                <li name="청렴위반신고센터" role="link"><a href="#n"><span>청렴위반신고센터</span></a></li>
+                                                <li name="규제개혁시민제안" role="link"><a href="#n"><span>규제개혁시민제안</span></a></li>
+                                                <li name="적극행정" role="link"><a href="#n"><span>적극행정</span></a></li>
+                                                <li name="인권센터(인권침해 신고)" role="link"><a href="#n"><span>인권센터(인권침해 신고)</span></a></li>
+                                                <li name="시민고충처리위원회" role="link"><a href="#n"><span>시민고충처리위원회</span></a></li>
+                                                <li name="일자리시민제안" role="link"><a href="#n"><span>일자리시민제안</span></a></li>
+                                            </ul>
+                                        </li>
+                                        <li name="민원안내" role="link">
+                                            <a href="#n">
+                                                <span>민원안내</span>
+                                            </a>
+                                            <ul class="depth3">
+                                                <li name="민원 도우미" role="link"><a href="#n"><span>민원 도우미</span></a></li>
+                                                <li name="민원업무 안내" role="link"><a href="#n"><span>민원업무 안내</span></a></li>
+                                                <li name="민원신고" role="link"><a href="#n"><span>민원신고</span></a></li>
+                                                <li name="민원사무편람" role="link"><a href="#n"><span>민원사무편람</span></a></li>
+                                                <li name="기관별민원사무목록" role="link"><a href="#n"><span>기관별민원사무목록</span></a></li>
+                                                <li name="의료법인 설립 및 운영" role="link"><a href="#n"><span>의료법인 설립 및 운영</span></a></li>
+                                                <li name="의무 및 약무 민원" role="link"><a href="#n"><span>의무 및 약무 민원</span></a></li>
+                                                <li name="민원 및 시설 이용시간 안내" role="link"><a href="#n"><span>민원 및 시설 이용시간 안내</span></a></li>
+                                                <li name="민원인 대기현황(시청)" role="link"><a href="#n"><span>민원인 대기현황(시청)</span></a></li>
+                                                <li name="세종시민 보조금 혜택" role="link"><a href="#n"><span>세종시민 보조금 혜택</span></a></li>
+                                            </ul>
+                                        </li>
+                                        <li name="시민참여" role="link">
+                                            <a href="#n">
+                                                <span>시민참여</span>
+                                            </a>
+                                            <ul class="depth3">
+                                                <li name="설문조사" role="link"><a href="#n"><span>설문조사</span></a></li>
+                                                <li name="세종투표" role="link"><a href="#n"><span>세종투표</span></a></li>
+                                                <li name="신청접수" role="link"><a href="#n"><span>신청접수</span></a></li>
+                                                <li name="나의 시민의창(민원글쓰기)" role="link"><a href="#n"><span>나의 시민의창(민원글쓰기)</span></a></li>
+                                                <li name="주민자치프로그램" role="link"><a href="#n"><span>주민자치프로그램</span></a></li>
+                                            </ul>
+                                        </li>
+                                        <li name="시민리포트" role="link">
+                                            <a href="#n">
+                                                <span>시민리포트</span>
+                                            </a>
+                                            <ul class="depth3">
+                                                <li name="시정모니터" role="link"><a href="#n"><span>시정모니터</span></a></li>
+                                                <li name="고령친화도시 정책모니터단" role="link"><a href="#n"><span>고령친화도시 정책모니터단</span></a></li>
+                                                <li name="블로그기자단" role="link"><a href="#n"><span>블로그기자단</span></a></li>
+                                                <li name="도시재생시민기자단" role="link"><a href="#n"><span>도시재생시민기자단</span></a></li>
+                                                <li name="세종프렌즈(Sejong Friends)" role="link"><a href="#n"><span>세종프렌즈(Sejong Friends)</span></a></li>
+                                                <li name="소셜허브" role="link"><a href="#n"><span>소셜허브</span></a></li>
+                                                <li name="알알이 한글" role="link"><a href="#n"><span>알알이 한글</span></a></li>
+                                                <li name="똑똑세종/제안" role="link"><a href="#n"><span>똑똑세종/제안</span></a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li name="여행정보" role="link">
+                                <a href="#n">
+                                    <span>여행정보</span>
+                                </a>
+                            </li>
+                            <li name="세종소개" role="link">
+                                <a href="#n">
+                                    <span>세종소개</span>
+                                </a>
+                            </li>
+                            <li name="정보소개" role="link">
+                                <a href="#n">
+                                    <span>정보소개</span>
+                                </a>
+                            </li>
+                            <li name="분야별정보" role="link">
+                                <a href="#n">
+                                    <span>분야별정보</span>
+                                </a>
+                            </li>
+                            <li name="생활정보" role="link">
+                                <a href="#n">
+                                    <span>생활정보</span>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                     <div class="sitemap" name="사이트맵" role="link"><a href="#n"><span>사이트맵</span></a></div>
                 </div>
-            </div>
             </div>
         </header>
         <div class="container">
@@ -90,9 +197,9 @@
                                 <div class="swiper_nav">
                                     <div class="swiper-pagination"></div>
                                     <div class="buntton_inner">
-                                        <button class="prev"><span>이전</span></button>
-                                        <button class="stop"><span>정지</span></button>
-                                        <button class="next"><span>다음</span></button>
+                                        <button class="prev" name="이전" role="button"><span>이전</span></button>
+                                        <button class="stop" name="정지" role="button"><span>정지</span></button>
+                                        <button class="next" name="다음" role="button"><span>다음</span></button>
                                     </div>
                                 </div>
                             </div>
@@ -105,19 +212,94 @@
                             </div>
                             <div class="photo"><img src="../Sejong/images/visual/mayor_01.jpg" alt="시장사진"></div>
                             <ul>
-                                <li class="office"><a href="#n"><span>열린 시장실</span></a></li>
-                                <li class="pledge"><a href="#n"><span>공약</span></a></li>
-                                <li class="schedule"><a href="#n"><span>일정보기</span></a></li>
+                                <li class="office" name="시장실" role="link"><a href="#n"><span>열린 시장실</span></a></li>
+                                <li class="pledge" name="공약" role="link"><a href="#n"><span>공약</span></a></li>
+                                <li class="schedule" name="일정보기" role="link"><a href="#n"><span>일정보기</span></a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </section>
             <section class="number2">
-                <div class="wrapper"></div>
+                <div class="wrapper">
+                    <h2>서비스</h2>
+                    <ul>
+                        <li class="civil" name="민원안내" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>민원안내</span>
+                            </a>
+                        </li>
+                        <li class="recruitment" name="채용공고" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>채용공고</span>
+                            </a>
+                        </li>
+                        <li class="matching" name="어울링" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>어울링</span>
+                            </a>
+                        </li>
+                        <li class="government" name="시정 소식지" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>시정 소식지</span>
+                            </a>
+                        </li>
+                        <li class="bus" name="버스정보 센터" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>버스정보 센터</span>
+                            </a>
+                        </li>
+                        <li class="monitor" name="시정모니터" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>시정모니터</span>
+                            </a>
+                        </li>
+                        <li class="free_law" name="무료법률 상담" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>무료법률 상담</span>
+                            </a>
+                        </li>
+                        <li class="waste" name="대형폐기물 배출" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>대형폐기물 배출</span>
+                            </a>
+                        </li>
+                        <li class="expenses" name="업무추진비 공개" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>업무추진비 공개</span>
+                            </a>
+                        </li>
+                        <li class="integrity" name="청렴도 측정 공개" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>청렴도 측정 공개</span>
+                            </a>
+                        </li>
+                        <li class="view" name="전체보기" role="link">
+                            <a href="#n">
+                                <i>아이콘</i>
+                                <span>전체보기</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <section class="number3">
-                <div class="wrapper"></div>
+                <div class="wrapper">
+                    <h2>
+                        여러분의 목소리가 세종시를 바꾸는 정책이 됩니다
+                    </h2>
+                    <div class="more"><a href="#n"></a></div>
+                </div>
             </section>
             <section class="number4">
                 <div class="wrapper"></div>
