--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -298,7 +298,7 @@
                     <h2>
                         여러분의 목소리가 세종시를 바꾸는 정책이 됩니다
                     </h2>
-                    <div class="more"><a href="#n"></a></div>
+                    <div class="more"><a href="#n">세종에게 제안하기</a></div>
                     <div class="left_human"><img src="../Sejong/images/event_popup/event_banner_left.svg" alt="배경 배너 왼쪽 사람"></div>
                     <div class="right_human"><img src="../Sejong/images/event_popup/event_banner_right.svg" alt="배경 배너 오른쪽 사람"></div>
                 </div>
