250225.모바일메뉴랑 푸터구현해야함
,,

--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -38,7 +38,7 @@
             </div> 
             <div class="header_bottom">
                 <div class="wrapper">
-                    <h1 class="logo"><a href="#n"><img src="../Sejong/images/visual/sejong_logo.svg" alt="세종시로고"><span>세종로고</span></a></h1>
+                    <h1 class="logo"><a href="#n"><img src="../Sejong/images/logo_w.svg" alt="세종시로고"><span>세종로고</span></a></h1>
                     <nav class="gnb">
                         <ul class="depth1">
                             <li name="민원 소통 참여" role="link">
@@ -577,7 +577,55 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="sitemap" name="사이트맵" role="link"><a href="#n"><span>사이트맵</span></a></div>
+                    <div class="sitemap" name="사이트맵" role="link">
+                        <a href="#n">
+                            <span>사이트맵</span>
+                        </a>
+                    </div>
+                    <!-- 모바일 -->
+                    <div class="mobile_menu">
+                        <div class="mobile_wrap">
+                            <div class="mobile_list_header">
+                                <button class="login">로그인</button>
+                                <button class="membership">회원가입</button>
+                            </div>
+                            <div class="mobile_list_body">
+                                <ul class="depth1">
+                                    <li class="active">
+                                        <a href="#n">민원 소통 참여<i>화살표아이콘</i></a>
+                                        <ul class="depth2">
+                                            <li class="active">
+                                                <a href="#n">시민의창<i>화살표아이콘</i></a>
+                                                <ul class="depth3">
+                                                    <li><a href="#n">시민의 창이란?</a></li>
+                                                    <li><a href="#n">민원글쓰기 안내</a></li>
+                                                    <li><a href="#n">시민의창 민원목록</a></li>
+                                                    <li><a href="#n">나의 시민의창(민원글쓰기)</a></li>
+                                                    <li><a href="#n">칭찬합니다</a></li>
+                                                    <li><a href="#n">공익게시판</a></li>
+                                                    <li><a href="#n">시민들이 자주 묻는 질문과 답변</a></li>
+                                                    <li><a href="#n">똑똑세종/제안</a></li>
+                                                    <li><a href="#n">시민참여예산제</a></li>
+                                                    <li><a href="#n">시민참여예산제 사업제안</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#n">똑똑세종<i>화살표아이콘</i></a></li>
+                                            <li><a href="#n">민원안내<i>화살표아이콘</i></a></li>
+                                            <li><a href="#n">정보소개<i>화살표아이콘</i></a></li>
+                                            <li><a href="#n">시민참여<i>화살표아이콘</i></a></li>
+                                            <li><a href="#n">시민리포트<i>화살표아이콘</i></a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#n">여행정보<i>화살표아이콘</i></a></li>
+                                    <li><a href="#n">세종소개<i>화살표아이콘</i></a></li>
+                                    <li><a href="#n">정보소개<i>화살표아이콘</i></a></li>
+                                    <li><a href="#n">분야별정보<i>화살표아이콘</i></a></li>
+                                    <li><a href="#n">생활정보<i>화살표아이콘</i></a></li>
+                                    <li><a href="#n">민원 소통 참여<i>화살표아이콘</i></a>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
@@ -796,41 +844,7 @@
                             <!-- //tab list -->                          
                             <!-- tab contents -->
                             <div class="tab_content">
-                                <div role="tabpanel" aria-labelledby="tab_login_01">
-                                    <ul class="on">
-                                        <li>
-                                            <a href="#n">
-                                                <span class="on_line">고병원성조류인플루엔자 발생현황 정보공개(34차)</span>
-                                                <span class="date">2025.02.14</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#n">
-                                                <span class="on_line">2025년 제16회 관광벤처사업 공모 알림</span>
-                                                <span class="date">2025.02.14</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#n">
-                                                <span class="on_line">육군 제17보병사단, 2025년 혹한기 전술훈련 안내</span>
-                                                <span class="date">2025.02.14</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#n">
-                                                <span class="on_line">인천형 평생교육이용권(바우처) 기간제근로자(사무보조원) 채용공고</span>
-                                                <span class="date">2025.02.14</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#n">
-                                                <span class="on_line">「인천 3.6.9. 걷기 」 사업 추진 안내</span>
-                                                <span class="date">2025.02.14</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div role="tabpane2" aria-labelledby="panel_01">
+                                <div role="tabpanel" aria-labelledby="panel_01">
                                     <ul>
                                         <li>
                                             <a href="#n">
@@ -864,23 +878,23 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div role="tabpane3" aria-labelledby="panel_02">
+                                <div role="tabpanel" aria-labelledby="panel_02">
                                     <ul>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">고병원성조류인플루엔자 발생현황 정보공개(34차)</span>
+                                                <span class="on_line">급경사지 붕괴위험지역 지정에 따른 의견수렴 공고(금남 황용N5 지구 외7개소)</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">2025년 제16회 관광벤처사업 공모 알림</span>
+                                                <span class="on_line">도로명주소 부여 고시</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">육군 제17보병사단, 2025년 혹한기 전술훈련 안내</span>
+                                                <span class="on_line">2025년 외국인 근로자 고용안정 지원사업 지원계획 공고</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
@@ -892,41 +906,75 @@
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">「인천 3.6.9. 걷기 」 사업 추진 안내</span>
+                                                <span class="on_line">2026년도 농림축산식품사업 예산 신청 공고</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                     </ul>
                                 </div>
-                                <div role="tabpane4" aria-labelledby="panel_03">
+                                <div role="tabpanel" aria-labelledby="panel_03">
                                     <ul>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">고병원성조류인플루엔자 발생현황 정보공개(34차)</span>
+                                                <span class="on_line">지방공무원 임용시험 시행계획 공고</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">2025년 제16회 관광벤처사업 공모 알림</span>
+                                                <span class="on_line">제1회 임기제공무원 경력경쟁임용시험 계획 공고 법률전문가, 심리상담, 불법주정차 단속 분야</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">육군 제17보병사단, 2025년 혹한기 전술훈련 안내</span>
+                                                <span class="on_line">제12회 임기제공무원 경력경쟁임용시험 최종합격자 공고</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">인천형 평생교육이용권(바우처) 기간제근로자(사무보조원) 채용공고</span>
+                                                <span class="on_line">제11회 임기제공무원 경력경쟁임용시험 최종합격자 공고</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#n">
-                                                <span class="on_line">「인천 3.6.9. 걷기 」 사업 추진 안내</span>
+                                                <span class="on_line">제13회 임기제공무원 임용시험 서류전형 합격자 결정 및 면접시험 계획 공고</span>
+                                                <span class="date">2025.02.14</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div role="tabpanel" aria-labelledby="panel_04">
+                                    <ul>
+                                        <li>
+                                            <a href="#n">
+                                                <span class="on_line">“우리의 문제는 현장에 답이 있다”</span>
+                                                <span class="date">2025.02.14</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <span class="on_line">맞춤형 중소기업 지원 정보 한곳에서 만난다</span>
+                                                <span class="date">2025.02.14</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <span class="on_line">20년 이상 지난 노후산단 활성화 정책연구 착수</span>
+                                                <span class="date">2025.02.14</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <span class="on_line">시민과 함께, 올바른 자전거 문화 만들어요!</span>
+                                                <span class="date">2025.02.14</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <span class="on_line">조치원소방서-세종시립민속박물관 합동소방훈련</span>
                                                 <span class="date">2025.02.14</span>
                                             </a>
                                         </li>
@@ -966,19 +1014,21 @@
             </div>
             <div class="number6">
                 <div class="wrapper">
-                    <h2>세종소식</h2>
+                    <h2>세종TV</h2>
                     <div class="sns_content">
-                        <div class="sejong_tv01">
-                            <a href="#n">
-                                <div class="youtube">유튜브 아이콘</div>
-                                <div class="photo"><img src="../Sejong/images/tv/sejong_tv_01.jpg" alt="유튜브 썸네일"></div>
-                            </a>
-                        </div>
-                        <div class="sejong_tv02">
-                            <a href="#n">
-                                <div class="youtube">유튜브 아이콘</div>
-                                <div class="photo"><img src="../Sejong/images/tv/sejong_tv_02.jpg" alt="유튜브 썸네일"></div>
-                            </a>
+                        <div class="inner">
+                            <div class="sejong_tv01">
+                                <a href="#n">
+                                    <div class="youtube">유튜브 아이콘</div>
+                                    <div class="photo"><img src="../Sejong/images/tv/sejong_tv_01.jpg" alt="유튜브 썸네일"></div>
+                                </a>
+                            </div>
+                            <div class="sejong_tv02">
+                                <a href="#n">
+                                    <div class="youtube">유튜브 아이콘</div>
+                                    <div class="photo"><img src="../Sejong/images/tv/sejong_tv_02.jpg" alt="유튜브 썸네일"></div>
+                                </a>
+                            </div>
                         </div>
                         <div class="sns">
                             <div class="left_inner">
@@ -1003,7 +1053,19 @@
                 <div class="footer_head">
                     <div class="wrapper">
                         <ul class="footer_link">
-                            <li><a href="#n">실속/직속기관/사업소<i>화살표아이콘</i></a></li>
+                            <li>
+                                <a href="#n"><span>실속/직속기관/사업소</span><i>화살표아이콘</i></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">자치행정국</a></li>
+                                    <li><a href="#n">도시주택국</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">세종소방서</a></li>
+                                    <li><a href="#n">남부통합보건지소</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">도로관리사업소</a></li>
+                                </ul>
+                            </li>
                             <li><a href="#n">읍면동<i>화살표아이콘</i></a></li>
                             <li><a href="#n">관련사이트<i>화살표아이콘</i></a></li>
                             <li><a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a></li>
