--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -585,7 +585,10 @@
                     <!-- 모바일 -->
                     <div class="mobile_menu">
                         <div class="mobile_wrap">
-                            <div class="mobile_list_header">
+                            <div class="mobile_header_top">
+                                <div class="close"><a href="#n">닫기</a></div>
+                            </div>
+                            <div class="mobile_header_bottom">
                                 <button class="login">로그인</button>
                                 <button class="membership">회원가입</button>
                             </div>
