250226-포폴 3차 완료
scss로 구현함

--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -594,11 +594,11 @@
                             </div>
                             <div class="mobile_list_body">
                                 <ul class="depth1">
-                                    <li class="active">
+                                    <li>
                                         <a href="#n">민원 소통 참여<i>화살표아이콘</i></a>
                                         <ul class="depth2">
-                                            <li class="active">
-                                                <a href="#n">시민의창<i>화살표아이콘</i></a>
+                                            <li>
+                                                <a href="#n"><span>시민의창</span><i>화살표아이콘</i></a>
                                                 <ul class="depth3">
                                                     <li><a href="#n">시민의 창이란?</a></li>
                                                     <li><a href="#n">민원글쓰기 안내</a></li>
@@ -612,11 +612,11 @@
                                                     <li><a href="#n">시민참여예산제 사업제안</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#n">똑똑세종<i>화살표아이콘</i></a></li>
-                                            <li><a href="#n">민원안내<i>화살표아이콘</i></a></li>
-                                            <li><a href="#n">정보소개<i>화살표아이콘</i></a></li>
-                                            <li><a href="#n">시민참여<i>화살표아이콘</i></a></li>
-                                            <li><a href="#n">시민리포트<i>화살표아이콘</i></a></li>
+                                            <li><a href="#n"><span>똑똑세종</span><i>화살표아이콘</i></a></li>
+                                            <li><a href="#n"><span>민원안내</span><i>화살표아이콘</i></a></li>
+                                            <li><a href="#n"><span>정보소개</span><i>화살표아이콘</i></a></li>
+                                            <li><a href="#n"><span>시민참여</span><i>화살표아이콘</i></a></li>
+                                            <li><a href="#n"><span>시민리포트</span><i>화살표아이콘</i></a></li>
                                         </ul>
                                     </li>
                                     <li><a href="#n">여행정보<i>화살표아이콘</i></a></li>
@@ -633,7 +633,7 @@
             </div>
         </header>
         <div class="container">
-            <div class="number1">
+            <div class="number1" id="skip_content">
                 <div class="wrapper">
                     <!-- 폼그룹 -->
                     <div class="serach">
@@ -1069,10 +1069,54 @@
                                     <li><a href="#n">도로관리사업소</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#n">읍면동<i>화살표아이콘</i></a></li>
-                            <li><a href="#n">관련사이트<i>화살표아이콘</i></a></li>
-                            <li><a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a></li>
-                            <li><a href="#n">지역/전국 기관<i>화살표아이콘</i></a></li>
+                            <li><a href="#n">읍면동<i>화살표아이콘</i></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">자치행정국</a></li>
+                                    <li><a href="#n">도시주택국</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">세종소방서</a></li>
+                                    <li><a href="#n">남부통합보건지소</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">도로관리사업소</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#n">관련사이트<i>화살표아이콘</i></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">자치행정국</a></li>
+                                    <li><a href="#n">도시주택국</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">세종소방서</a></li>
+                                    <li><a href="#n">남부통합보건지소</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">도로관리사업소</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">자치행정국</a></li>
+                                    <li><a href="#n">도시주택국</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">세종소방서</a></li>
+                                    <li><a href="#n">남부통합보건지소</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">도로관리사업소</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#n">지역/전국 기관<i>화살표아이콘</i></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">자치행정국</a></li>
+                                    <li><a href="#n">도시주택국</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">세종소방서</a></li>
+                                    <li><a href="#n">남부통합보건지소</a></li>
+                                    <li><a href="#n">공보관</a></li>
+                                    <li><a href="#n">도로관리사업소</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
